<resources>
    <string name="app_name">GoNannySingleActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="continue_as_nanny">CONTINUE AS NANNY</string>
    <string name="continue_as_parent_guardian">CONTINUE AS PARENT/GUARDIAN</string>
    <string name="create_a_request_easily_for_kids">Create A Request Easily \nFor Kids</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="find_the_best_nanny">Find The Best \nNanny</string>
    <string name="manage_pay_from_app">Manage &amp; Pay From \nThe App</string>
    <string name="info_on_boarding">Lorem ipsum dolor sit amet, \nconsectetur adipiscing elit, sed do \neiusmod tempor incididunt.</string>
    <string name="obNannyTwo">With GoNanny generous \nminimum hourly rate paid\n fortnight</string>
    <string name="obInfoNannyTwo">With GoNanny you get paid generously and \nand fortnightly,safely and easily</string>
    <string name="obNannyThree">With GoNanny love what you\n do</string>
    <string name="onInfoNannyThree">Express your self through caption talking \n better about you</string>
    <string name="obNannyOne">GoNanny is made so you \nafford working flexibly.</string>
    <string name="onInfoNannyOne">You get to control your availability when \nworking through GoNanny</string>
    <string name="welcome_to">Welcome to</string>
    <string name="continue_with_number">CONTINUE WITH NUMBER</string>
    <string name="continue_with_google">CONTINUE WITH GOOGLE</string>
    <string name="continue_with_facebook">CONTINUE WITH FACEBOOK</string>
    <string name="continue_with_phone_number">Continue With Phone Number</string>
    <string name="let_s_start_with_just_your_phone_number">Let\'s start with just your phone number.</string>
    <string name="_1">+1</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="btnContinue">Continue</string>
    <string name="already_have_an_account_sign_in">Already have an account? Sign In</string>
    <string name="otp_sent_to">Enter the code just sent to \n</string>
    <string name="enter_the_code_just_sent_to_n_91_987654321">Enter the code just sent to \n+91 987654321</string>
    <string name="did_not_get_code">Didn\'t get a code?</string>
    <string name="didn_t_get_a_code_send_again">Didn\'t get a code? Send again</string>
    <string name="your_mobile_number_has_nsuccessfully_verified">Your mobile number has \nsuccessfully verified!</string>
    <string name="complete_sign_up">Complete Sign Up</string>
    <string name="please_create_your_new_account">Please create your new account.</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_amp_privacy">By creating an account you agree with our \nTerms of Service &amp; Privacy Policy.</string>
    <string name="sign_up">Sign Up</string>
    <string name="hourly_behaviour">Hourly Behaviour</string>
    <string name="suggested_food_times_nap_time_favorite_shows">Suggested: food times, nap time, favorite shows.</string>
    <string name="allergies">Allergies</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="indoor_camera">Indoor camera</string>
    <string name="add">ADD</string>
    <string name="you_can_only_add_7_kid_s">You can only add 7 kid\'s.</string>
    <string name="maximum_of_4_kids_of_pre_school_age_nor_under">Maximum of 4 kids of pre-school age \nor under.</string>
    <string name="card_number">CARD NUMBER</string>
    <string name="expiry">EXPIRY</string>
    <string name="cvv">CVV</string>
    <string name="card_holder_name">CARD HOLDER NAME</string>
    <string name="paraOne">
        Sed lobortis vitae diam id ullamcorper. In
        \nconvallis, massa vel mollis placerat, felis
        \nnisi imperdiet leo, et congue risus enim ut
        \narcu. Morbi eget risus orci. Duis blandit
        \nfaucibus magna, ac malesuada turpis
        \nscelerisque facilisis.
    </string>
    <string name="paraTwo">
        hasellus vitae velit dignissim, venenatis
        \nneque ut, interdum justo. Duis tristique nibh
        \nsed massa mollis porttitor. Aliquam
        \nconsequat sagittis ligula, at ultricies dui
        \npretium in. Etiam pellentesque mattis
        \nsapien nec dapibus. Etiam id faucibus nisi.
        \nIn ornare bibendum tortor, sed faucibus
        \ndolor eleifend sed. Donec non semper
        \ntellus.
    </string>
    <string name="paraThree">
        Aenean ultricies orci purus, sed tincidunt
        \narcu tristique sit amet. Vestibulum maximus
        \nnulla eget lectus varius, malesuada
        \npellentesque purus tempus.
    </string>
    <string name="agree">AGREE</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="please_log_in_to_your_account">Please log in to your account.</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account? Sign Up</string>
    <string name="please_enter_your_email">Please enter your email.</string>
    <string name="send_reset_link">Send Reset Link</string>
    <string name="get_started">Get Started</string>
    <string name="select_location">Select Location</string>
    <string name="new_york">New York</string>
    <string name="change">Change</string>
    <string name="address">20 Cooper Square, New York, NY 10003, USA</string>
    <string name="a_detailed_address">A detailed address will help our nannies reach your doorstep easily</string>
    <string name="house_flat_block_no">House / Flat / Block No.</string>
    <string name="landmark">LANDMARK</string>
    <string name="this_will_be_also_my_mailing_address">This will be also my mailing address?</string>
    <string name="add_address">Add Address</string>
    <string name="add_kids_info">Add Kid\'s Information</string>
    <string name="add_a_card">Add a Card</string>
    <string name="sign_an_agreement">Signing the Agreement</string>
    <string name="forgotten_password">Forgotten Your Password?</string>
    <string name="notification">Notifications</string>
    <string name="get_pricing">Get Pricing</string>
    <string name="john_dave">John dave</string>
    <string name="close_menu">Close Menu</string>
    <string name="johndoe123_email_com">johndoe123@email.com</string>
    <string name="home">Home</string>
    <string name="bookings">Bookings</string>
    <string name="settings">Settings</string>
    <string name="notifications">Notifications</string>
    <string name="book_a_nanny">Book a Nanny</string>
    <string name="needed_date_time"><![CDATA[Needed Date & Time]]></string>
    <string name="select">Select</string>
    <string name="_address">Address</string>
    <string name="duration">Duration</string>
    <string name="number_of_kids">Number of kids</string>
    <string name="select_time">Select Time</string>
    <string name="confirm_select"><![CDATA[CONFIRM & SELECT]]></string>
    <string name="info_text">Only 2 hours notice up to only 24 hours \nnotice.</string>
    <string name="duration_one">Overnight slot only available from \n7:00PM to 7:00AM.</string>
    <string name="duration_two">Six hours slots only available from \nStarting at 5:00AM until Starting at \n5:00PM.</string>
    <string name="duration_three">Hourly availability from 5:00AM till \n10:00PM.</string>
    <string name="info_duration">The duration from 11:00pm till 5:00AM is not \navailable for hourly reservation.</string>
    <string name="log_out">Log out</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="peter_lee">Peter Lee</string>
    <string name="info_select_kids">If there\'s a kid less than 36 moths old, please \ncheck the RATIO TABLE.</string>
    <string name="your_request">YOUR REQUEST</string>
    <string name="_16_feb_2021_02_00pm">16 Feb 2021, 02:00PM</string>
    <string name="_7pm_to_7am">7PM to 7AM</string>
    <string name="food_time">Food time</string>
    <string name="kids">Kids</string>
    <string name="_2_kid_s">2 Kid\'s</string>
    <string name="service_charge">Service Charge</string>
    <string name="_100_00">$100.00</string>
    <string name="pricing">PRICING</string>
    <string name="tax">Tax</string>
    <string name="_5_00">$5.00</string>
    <string name="total_charges">Total Charges</string>
    <string name="_105_00">$105.00</string>
    <string name="start_searching_for_nanny">START SEARCHING FOR NANNY</string>
    <string name="blur_info">Duis nulla libero, eleifend eu varius in, \nsodales ac velit.</string>
    <string name="eliana_d_cruz">Eliana D\'Cruz</string>
    <string name="info_one_search_nanny">If you do not take any action within a minute then \nthis nanny will be automatically approved.</string>
    <string name="approve_00_15">Approve 00:15</string>
    <string name="keep_searching">Keep Searching</string>
    <string name="_105">$105</string>
    <string name="total_fare">Total Fare</string>
    <string name="booking_details">BOOKING DETAILS</string>
    <string name="pending">Pending</string>
    <string name="view_details">View Details</string>
    <string name="show_profile">Show Profile</string>
    <string name="used_hours">Used Hours</string>
    <string name="addresses">Addresses</string>
    <string name="cards">Cards</string>
    <string name="change_password">Change Password</string>
    <string name="contact_us">Contact us</string>
    <string name="about">About</string>
    <string name="about_read_more">Lorem ipsum dolor sit amet, consectetur adipis \ning elit. In imperdiet, lorem sit...Read more</string>
    <string name="_984851">984851</string>
    <string name="your_booking_verification_code">YOUR BOOKING VERIFICATION CODE</string>
    <string name="nanny_profile">Nanny Profile</string>
    <string name="cancel_booking">Cancel Booking</string>
    <string name="chat">chat</string>
    <string name="ongoing">OnGoing</string>
    <string name="completed">Completed</string>
    <string name="sign_in">Sign In</string>
    <string name="terms_of_service">Terms of Service</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="privacy_policy_">Privacy Policy</string>
    <string name="password_info">Password should contain atleast 1 uppercase, 1 lowercase, 1 special  and 1 numeric character.</string>
    <string name="enter_valid_email">Enter valid Email.</string>
    <string name="enter_valid_name">Enter valid name</string>
    <string name="send_again"><u>Send again</u></string>
    <string name="warning_enter_card_number">Enter valid card number</string>
    <string name="wraning_card_expiry">Enter valid card expiry</string>
    <string name="warning_card_cvv">Enter valid card CVV</string>
    <string name="warning_card_holder_name">Enter valid card holder name</string>
    <string name="info_card_added">Card Added</string>
    <string name="check_internt">Please check your Internet connection.</string>
    <string name="can_not_perform_action">Cannot perform action</string>
    <string name="premission_granted">Permission Granted</string>
    <string name="peermission_denied">Permission Denied</string>
    <string name="message_sent_ok">Otp sent successfully.</string>
    <string name="no_address_found">No Address found</string>
    <string name="select_another_address">select Another address</string>
    <string name="select_add">Please Select Address</string>
    <string name="helper_text_cancel_booking">Are you sure you want to cancel this booking ?</string>
    <string name="cancel_booking_">Cancel Booking ?</string>
    <string name="reason_of_cancellation">Reason of cancellation</string>
    <string name="discard">Discard</string>
    <string name="yes_cancel">Yes, Cancel</string>
</resources>