<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/appBackgroundColor"
    android:orientation="vertical">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:background="@color/appBackgroundColor"
        android:elevation="4dp">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_marginTop="24dp"
            app:title="@string/forgot_password" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/tvPleaseEnterEmail"
        style="@style/textViewApp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:text="@string/please_enter_your_email"
        android:textColor="@color/oftenTextColorsTwo" />

    <EditText
        style="@style/editTextApp"
        android:id="@+id/etEmail"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/curved_stroke"
        android:drawableStart="@drawable/ic_email_color"
        android:drawablePadding="16dp"
        android:fontFamily="@font/proxima_nova_regular"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp" />

    <Button
        android:id="@+id/btnResetLink"
        style="@style/buttonStyle"
        android:layout_marginHorizontal="@dimen/marginDefault"
        android:layout_marginTop="24dp"
        android:background="@drawable/red_button_shape_right"
        android:text="@string/send_reset_link"
        android:textColor="@android:color/white" />

</LinearLayout>